--- a/main.html
+++ b/main.html
@@ -12,22 +12,22 @@
 	  <tr>
 	  <td>1</td>
 	  <td>Item-1</td>
-	  <td data-ns-test="price">181</td>
+	  <td data-ns-test="prices">181</td>
   </tr>
 	  <tr>
 	  <td>2</td>
 	  <td>Item-2</td>
-	  <td data-ns-test="price">183</td>
+	  <td data-ns-test="prices">183</td>
   </tr>
 	  <tr>
 	  <td>3</td>
 	  <td>Item-3</td>
-	  <td data-ns-test="price">173</td>
+	  <td data-ns-test="prices">173</td>
   </tr>
   <tr>
 	  <td>4</td>
 	  <td>Item-4</td>
-	  <td data-ns-test="price">171</td>
+	  <td data-ns-test="prices">171</td>
   </tr>
   </table>
 
